<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="800dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="25dp" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="35dp"
        android:text="@string/dialog_add_frames_title"
        android:textSize="30sp"
        android:textColor="@color/text_color" />
    <ImageView
        android:id="@+id/choiceIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/question"
        android:background="@layout/border_selected"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@id/title" />
    <ImageView
        android:id="@+id/seperatorLine"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@color/text_color"
        android:layout_below="@id/choiceIcon" />
    <TextView
        android:id="@+id/choicesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="35dp"
        android:layout_below="@id/seperatorLine"
        android:text="@string/dialog_add_frames_choices"
        android:textSize="30sp"
        android:textColor="@color/text_color" />
	<ScrollView 
          android:id="@+id/addedChoicesScrollView"
          android:layout_height="150dp"
          android:layout_width="750dp"
          android:layout_below="@id/choicesText"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="20dp"
		  android:fadeScrollbars="false">
		  <LinearLayout 
		   	    android:id="@+id/newChoiceContent"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:gravity="left"
		   	    android:orientation="vertical"
		   	    android:minHeight="150dp" >

		  </LinearLayout>
  	</ScrollView>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/addedChoicesScrollView"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <dk.aau.cs.giraf.gui.GButton
            android:id="@+id/btn_yes"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/ok"
            android:textSize="26sp"
            android:textColor="@color/text_color" />

        <dk.aau.cs.giraf.gui.GButton
            android:id="@+id/btn_no"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/abort"
            android:textSize="26sp"
            android:textColor="@color/text_color"
            android:onClick="dismissDialog"/>
    </LinearLayout>

</RelativeLayout>