<LinearLayout
    android:id="@+id/parent_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gcomponent="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_gradient_bg"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:id="@+id/sequence_bar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/main_topbar_gradient_bg"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/schedule_image_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image_big"
            android:background="@drawable/gbutton"
            android:onClick="startPictosearch"/>

        <TextView
            android:id="@+id/child_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Skemanavn"
            android:textSize="60sp"
            android:textColor="@color/text_color" />

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/exit"
            android:background="@drawable/gbutton"
            android:onClick="doExit"/>


    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:layout_weight="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#FFDD9639"
                android:id="@+id/frameLayout7">

                <dk.aau.cs.giraf.gui.GToggleButton
                    gcomponent:Toggled="true"
                    android:onClick="weekdaySelected"
                    android:id="@+id/monday"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/monday"
                    android:id="@id/child_name"
                    android:layout_gravity="center"
                    android:textSize="@dimen/weekday_text_width"
                    android:textColor="@color/text_color" />
            </FrameLayout>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/frameLayout7" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/purple" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#FFDD9639"
                android:id="@+id/frameLayout">

                <dk.aau.cs.giraf.gui.GToggleButton
                    gcomponent:Toggled="true"
                    android:onClick="weekdaySelected"
                    android:id="@+id/tuesday"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tuesday"
                    android:layout_gravity="center"
                    android:textSize="@dimen/weekday_text_width"
                    android:textColor="@color/text_color" />
            </FrameLayout>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView2"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/frameLayout" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#FFDD9639"
                android:id="@+id/frameLayout2">

                <dk.aau.cs.giraf.gui.GToggleButton
                    gcomponent:Toggled="true"
                    android:onClick="weekdaySelected"
                    android:id="@+id/wednesday"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/wednesday"
                    android:layout_gravity="center"
                    android:textSize="@dimen/weekday_text_width"
                    android:textColor="@color/text_color" />
            </FrameLayout>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView3"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/frameLayout2"
                android:layout_alignParentLeft="false" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#FFDD9639"
                android:id="@+id/frameLayout3">

                <dk.aau.cs.giraf.gui.GToggleButton
                    gcomponent:Toggled="true"
                    android:onClick="weekdaySelected"
                    android:id="@+id/thursday"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/thursday"
                    android:layout_gravity="center"
                    android:textSize="@dimen/weekday_text_width"
                    android:textColor="@color/text_color" />
            </FrameLayout>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView4"
                android:layout_below="@+id/frameLayout3"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/yellow" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#FFDD9639"
                android:id="@+id/frameLayout4">

                <dk.aau.cs.giraf.gui.GToggleButton
                    gcomponent:Toggled="true"
                    android:onClick="weekdaySelected"
                    android:id="@+id/friday"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/friday"
                    android:layout_gravity="center"
                    android:textSize="@dimen/weekday_text_width"
                    android:textColor="@color/text_color" />
            </FrameLayout>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView5"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/frameLayout4" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#FFDD9639"
                android:id="@+id/frameLayout5">

                <dk.aau.cs.giraf.gui.GToggleButton
                    gcomponent:Toggled="true"
                    android:onClick="weekdaySelected"
                    android:id="@+id/saturday"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/saturday"
                    android:layout_gravity="center"
                    android:textSize="@dimen/weekday_text_width"
                    android:textColor="@color/text_color" />
            </FrameLayout>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView6"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/frameLayout5" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:id="@+id/relativeLayout" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#FFDD9639"
                android:id="@+id/frameLayout6">

                <dk.aau.cs.giraf.gui.GToggleButton
                    gcomponent:Toggled="true"
                    android:onClick="weekdaySelected"
                    android:id="@+id/sunday"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/sunday"
                    android:layout_gravity="center"
                    android:textSize="@dimen/weekday_text_width"
                    android:textColor="@color/text_color" />
            </FrameLayout>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView7"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/frameLayout6" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>